# DWDP-Triton-MoE-Inference-Engine

./: Cuda_trial.ipynb  __init__.py  configuration_deepseek_v4.py  modeling_deepseek_v4.py  pyproject.toml  readme.md
DWDP/: __init__.py
DWDP/adapters/: README.md  __init__.py  base.py  extractor.py  huggingface.py  patcher.py  qwen15_moe.py  registry.py  validator.py
DWDP/benchmarking/: __init__.py  config.py  environment.py  experiment.py  metrics.py  report.py  runtime_stats.py  serialization.py  writer.py
DWDP/cli/: __init__.py  benchmark.py  main.py  profile.py  run.py
DWDP/comms_planner/: README.md  __init__.py  base.py  config.py  cost_model.py  graph.py  metadata.py  registry.py  static.py  topology.py  utils.py  workspace.py
DWDP/dispatcher/: README.md  __init__.py  assignments.py  base.py  config.py  expert_major.py  metadata.py  plan.py  registry.py  utils.py  workspace.py
benchmarks/: benchmark_comms_planner.py  benchmark_dispatcher.py  benchmark_dispatcher_triton.py  benchmark_executor.py  benchmark_grouped_matmul.py  benchmark_merger.py  benchmark_router.py  benchmark_scheduler.py  profile_moe_blocks.py
docs/: adapters.md  benchmark_reporting.md  comms_planner.md  dispatcher.md  executor.md  merger.md  router.md  runtime.md  scheduler.md
dwdp/: __init__.py  __main__.py  benchmark.py  profile.py  run.py
dwdp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
matmul/: main.cu
scripts/: benchmark_colab.py  benchmark_colab.sh  benchmark_qwen_t4.sh  benchmark_triton_kernel_colab.sh
testing_live_cuda/: fast_matmul_run.ipynb
(+125 files in other folders)
