[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dwdp"
version = "0.1.0"
description = "Distributed Weight Data Parallelism reference MoE inference runtime"
requires-python = ">=3.10"

[project.scripts]
dwdp = "DWDP.cli.main:main"

[tool.setuptools.packages.find]
include = ["DWDP*", "dwdp*"]
